--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #config spring security
 spring.security.user.name=hoidanit
 spring.security.user.password=123456
+
+#config view engine
+# off vì đã config bên file WebMvcConfig.java
+# spring tự động tìm đến thư mục này
+# spring.mvc.view.prefix=/WEB-INF/view/
+# #  chỉ cần tên file , không cần thêm đuôi .jsp
+# spring.mvc.view.suffix=.jsp
