--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
 #config spring security
-spring.security.user.name=hoidanit
-spring.security.user.password=123456
+# spring.security.user.name=hoidanit
+# spring.security.user.password=123456
 
 #config view engine
 # off vì đã config bên file WebMvcConfig.java
@@ -20,3 +20,6 @@ spring.security.user.password=123456
 spring.servlet.multipart.max-file-size=50MB
 #default = 10 MB (form data)
 spring.servlet.multipart.max-request-size=50MB
+
+# hiển thị log lên terminal
+logging.level.org.springframework.security=DEBUG
