--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,12 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-jdbc</artifactId>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
