--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,11 @@ spring.servlet.multipart.max-request-size=50MB
 
 # hiển thị log lên terminal
 logging.level.org.springframework.security=DEBUG
+
+
+# config session 30m = 30p , don vi tinh laf (s)
+spring.session.store-type=jdbc
+spring.session.timeout=30m
+spring.session.jdbc.initialize-schema=always
+#server.servlet.session.timeout
+#spring.session.jdbc.table-name=SPRING_SESSION
